Bug 5177 - Naive Bayes Learner & Predictor to support PMML (requires PMML 4.2) statistics view added and icon changed some bug fixes in the models